k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payflow-backend
spec:
  type: ClusterIP
  selector:
    app: payflow-backend
  ports:
    - port: 80
      targetPort: 3000
